create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -930,7 +930,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1260,7 +1260,7 @@ a {
   background-image: url("../../../assets/images/whatsapp-image-2024-06-09-at-18.21.28-2000x1500.jpg");
 }
 .cid-sFCAOqBTxa .mbr-section-title {
-  color: #fafafa;
+  color: #ffffff;
   text-align: center;
 }
 .cid-sFCAOqBTxa .mbr-text,
@@ -1626,7 +1626,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -2472,7 +2472,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -3252,7 +3252,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -3933,7 +3933,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -4637,7 +4637,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -5316,7 +5316,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -6005,7 +6005,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -6703,7 +6703,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-ueWoBtHJfR .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-ueWoBtHJfR .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -7386,7 +7386,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-uf0JBiYyRq .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-uf0JBiYyRq .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -8067,7 +8067,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-uf0QntGUYJ .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 3rem);
   }
 }
 .cid-uf0QntGUYJ .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -8397,7 +8397,7 @@ a {
   background-image: url("../../../assets/images/whatsapp-image-2024-06-09-at-18.21.28-2000x1500.jpg");
 }
 .cid-uf0QnvIEBy .mbr-section-title {
-  color: #fafafa;
+  color: #ffffff;
   text-align: center;
 }
 .cid-uf0QnvIEBy .mbr-text,
